# http

./: Cargo.toml  README.md
.github/workflows/: clippy.yml
pages/: about.html
src/: main.rs  request.rs  response.rs
src/endpoints/: about.rs  api.rs  mod.rs  root.rs
src/request/: body.rs  header.rs  mod.rs  request_line.rs
src/types/: body.rs  header.rs  mod.rs  request.rs  request_line.rs  response.rs  response_line.rs  status.rs
