[package]
name = "http"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

url = "2.5.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

anyhow = "1.0.98"
thiserror = "2.0.12"

tokio = { version = "1", features = [
    "rt-multi-thread",
    "io-util",
    "net",
    "macros",
    "fs",
] }
